k8s/pocket-id/tinyauth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyauth
  namespace: pocket-id
  annotations:
    glance/name: "TinyAuth"
    glance/icon: "si:traefik"
    glance/url: "https://tinyauth.home.coredev.uk"
    glance/description: "Forward Auth Middleware"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyauth
  template:
    metadata:
      labels:
        app: tinyauth
    spec:
      containers:
        - name: tinyauth
          image: ghcr.io/steveiliop56/tinyauth:v4.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          startupProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            periodSeconds: 10
      volumes:
        - name: data
          emptyDir: {}
