k8s/pocket-id/tinyauth/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth-ingressroute
  namespace: pocket-id
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tinyauth.home.coredev.uk`)
      kind: Rule
      services:
        - name: tinyauth
          port: 3000
  tls:
    secretName: tinyauth-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth-redirect
  namespace: pocket-id
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tinyauth.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: tinyauth
          port: 3000
